--- a/ep_multilaunch_settings.ini
+++ b/ep_multilaunch_settings.ini
@@ -3,8 +3,14 @@ sp = parallel
 dtime = 30
 ep_dir = C:\EnergyPlusV9-4-0\energyplus
 
+preprocessing_code = 
+postprocessing_code = 
+preprocessing_code_python = 
+postprocessing_code_python = 
+use_log_file = True
+
 [filepaths]
-fpath_select_idf = /
-fpath_select_epw = /
-fpath_folder = /
-fpath_queue = /
+fpath_select_idf = Z:/EnergyPlus/EP_Parallel_Launch/Demo - Copy/Low Income
+fpath_select_epw = Z:/EnergyPlus/EP_Parallel_Launch/Demo - Copy
+fpath_folder = Z:/EnergyPlus/EP_Parallel_Launch
+fpath_queue = Z:/EnergyPlus/EP_Parallel_Launch/Demo - Copy
